== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>

== 2022-07-19 Import Graph File
<p>A new plugin "Import Graph File" has been added to the Import section of Data Access View. This allows you to import data from graph file types such as GML, GraphML, and Pajek.</p>

== 2022-06-17 Datetime Formatter
<p>The Datetime formatter for attributes in the File Importer and Database Importer has been updated to include a new field 'Display Time Zone'. This field allows you to easily convert your datetime data to the desired timezone before importing.</p>

== 2022-05-27 Option to specify time zone in Importers
<p>A new field 'Time Zone' is added in the Datetime formatter of attributes in the File Importer and Database Importer. You can find it by right-clicking an attribute, navigating to Formatter -&gt; Datetime. Choosing 'EPOCH' as the Datetime format or entering a format that already contains a time zone will disable this field.</p>

== 2022-04-13 Plugins
<p>Some plugin parameters have been updated to have '*' at the end of the name to indicate that the plugin will require a value in order for the plugin to work.</p>

== 2022-03-30 Data Access View
<p>A new tab has been added in SetUp -&gt; Options -&gt; Data Access View to be able to hide data access categories that you don't want to see.</p>

== 2022-03-22 New Datetime formatter in the File Importer
<p>A new Datetime formatter has been added to the File Importer for parsing native Excel datetimes into Constellation. You can use it by right-clicking an attribute, navigating to Formatter -&gt; Datetime and choosing 'EXCEL' from the format dropdown list.</p>

== 2022-02-22 Find View (Experimental)
<p>A new version of the Find View can be accessed via Experimental -&gt; Views or Ctrl + B. This version is intended to replace the current Find View at some stage.</p>
