@@ -1,6 +1,10 @@
 == 3030-12-31 Getting Started
 <p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>
 
+
+== 2022-07-28 Clear Button in Database Importer
+<p>The "Import from Database" pane now has a clear button next to the query button. Clicking Clear will clear the results in the current run and will clear the query text</p>
+
 == 2022-07-19 Import Graph File
 <p>A new plugin "Import Graph File" has been added to the Import section of Data Access View. This allows you to import data from graph file types such as GML, GraphML, and Pajek.</p>
 
